// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Skeleton /> > renders the block variant with role=status and aria-live=polite 1`] = `
<span
  aria-label="Loading"
  aria-live="polite"
  class="neu-skeleton"
  role="status"
  style="width: 100%; height: 16px; border-radius: 4px; background: var(--color-pressed, #1A1A1E); box-shadow: var(--shadow-pressed); overflow: hidden; display: inline-block; position: relative; vertical-align: middle;"
>
  <span
    aria-hidden="true"
    style="position: absolute; inset: 0px; background-image: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.05) 50%, rgba(255, 255, 255, 0) 100%); background-size: 200% 100%; background-repeat: no-repeat; background-position-x: 200%;"
  />
  <span
    class="sr-only"
  >
    Loading
  </span>
</span>
`;

exports[`<Skeleton /> > renders the circle variant with custom size 1`] = `
<span
  aria-label="Loading"
  aria-live="polite"
  class="neu-skeleton"
  role="status"
  style="width: 40px; height: 40px; border-radius: 9999px; background: var(--color-pressed, #1A1A1E); box-shadow: var(--shadow-pressed); overflow: hidden; display: inline-block; position: relative; vertical-align: middle;"
>
  <span
    aria-hidden="true"
    style="position: absolute; inset: 0px; background-image: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.05) 50%, rgba(255, 255, 255, 0) 100%); background-size: 200% 100%; background-repeat: no-repeat; background-position-x: 200%;"
  />
  <span
    class="sr-only"
  >
    Loading
  </span>
</span>
`;

exports[`<Skeleton /> > renders the text variant with custom width 1`] = `
<span
  aria-label="Loading"
  aria-live="polite"
  class="neu-skeleton"
  role="status"
  style="width: 60%; height: 0.9em; border-radius: 4px; background: var(--color-pressed, #1A1A1E); box-shadow: var(--shadow-pressed); overflow: hidden; display: inline-block; position: relative; vertical-align: middle;"
>
  <span
    aria-hidden="true"
    style="position: absolute; inset: 0px; background-image: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.05) 50%, rgba(255, 255, 255, 0) 100%); background-size: 200% 100%; background-repeat: no-repeat; background-position-x: 200%;"
  />
  <span
    class="sr-only"
  >
    Loading
  </span>
</span>
`;
